--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,33 +3,16 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	<display-name>RFT Restful Web Application</display-name>
-
-	<context-param>
-		<param-name>resteasy.servlet.mapping.prefix</param-name>
-		<param-value>/rest</param-value>
-	</context-param>
-	
-	<listener>
-        <listener-class>
-            org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
-        </listener-class>
-    </listener>
+	<display-name>RFT Web Application</display-name>
 
 	<servlet>
 		<servlet-name>protoTester</servlet-name>
-		<servlet-class>
-			hu.inf.unideb.rest.ProtoTester
-                </servlet-class>
-		<init-param>
-			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>hu.inf.unideb.rest.Services</param-value>
-		</init-param>
+		<servlet-class>hu.inf.unideb.rest.ProtoTester</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>protoTester</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+		<url-pattern>/proto/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
